# ai-trader

./: .env.example  .gitignore  Dockerfile  Dockerfile.cloudrun  Dockerfile.slim  docker-compose.yml  pyproject.toml  requirements.txt  test_connection.py  verify_keys.py
backtest/: __init__.py  agent_contribution_test.py  cash_alternative_backtest.py  full_system_backtest.py  gate_check.py  liquidity_filter_backtest.py  llm_necessity_test.py  macro_sensitivity.py  macro_signal_backtest.py  minimal_backtest.py  multi_index_backtest.py  signal_attribution.py  signal_correlation_check.py  t1_execution_backtest.py  weight_optimization_test.py
backtest/agents/: __init__.py  fundamental_agent_minimal.py  technical_agent_minimal.py
config/: __init__.py  settings.py
deploy/: deploy-cloudrun.sh  manage.sh  setup-python.sh  setup-server.sh
docs/: CAPITAL_ALLOCATION.md  DECISION_LOG.md  MANUAL_FAILSAFE.md  SYSTEM_EXIT_RULES.md
results/: backtest_test.json  backtest_train.json  backtest_validation.json  full_system_backtest.json  liquidity_filter_backtest.json  macro_sensitivity.json  macro_signal_backtest.json  multi_index_backtest.json  randomisation_test.json  signal_attribution.json  signal_correlation.json  t1_execution_backtest.json
src/: backtest.py  backtest_dashboard.py  cloud_run_handler.py  dashboard.py  main.py  main_macro.py  paper_trading.py  run_cycle.py
src/capital/: allocation_tracker.py  unified_risk.py
src/compliance/: __init__.py  guard.py  watchdog.py
src/core/: base_agent.py  client.py  cognitive_loop.py  orchestrator.py  rate_limiter.py  (+2 more)
(+84 files in other folders)
